--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>test page</title>
 </head>
 <body>
-    <h1>welcome to test project</h1>
+    <h1 style="color: blue">welcome to test project</h1>
     <p>this is test project</p>
 </body>
 </html>
