new color added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>welcome to test project</h1>
+    <h1 style="color: gold">welcome to test project</h1>
     <p>this is test project</p>
 </body>
 </html>
