new style added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
     <h1> welcome to test project</h1>
 
-    <p>this is test project</p>
+    <p style="color: salmon">this is test project</p>
 </body>
 </html>
